@@ -6,11 +6,14 @@ Version 1.3.6+svn:
   * Multiplayer
     * Fixed a OOS message when recruiting which happened if the players use 
       different languages.
-  * Miscellaneous
-    * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
+    * Show the (possibly bogus) gold per village and fog settings of games with
+      "Use map settings" on in a darker font. (patch #771 by uso)
 
   * User interface
     * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
+
+  * Miscellaneous
+    * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
 
 
 Version 1.3.6:
